--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="logo.png" alt="Logo" />
         </div>
         <h1>Coming Soon</h1>
-        <p>Site-ul nostru va fi lansat în curând!</p>
+        <p>Site-ul nostru va fi lansat mai tîrziu!</p>
         <div id="countdown"></div>
     </div>
     <footer>
