input field for emails

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
         <h1>Coming Soon</h1>
         <p>Site-ul nostru va fi lansat mai tîrziu!</p>
         <div id="countdown"></div>
+        
+        <div class="email-signup">
+            <h2>Te anunțăm cînd se lansează site-ul?!</h2>
+            <form action="#" method="POST" class="email-form">
+                <input type="email" placeholder="Lasă-ne adresa ta de email" required>
+                <button type="submit">Anunță-mă!</button>
+            </form>
+        </div>
     </div>
     <footer>
         <p>&copy; 2024 Pontaj & HR. Toate drepturile rezervate.</p>
-    </footer>
+    </footer>    
 
     <script>
         var countDownDate = new Date("Jun 30, 2025 12:00:00").getTime();
